# playground

./: .gitignore  Jenkinsfile.groovy  README.md
.devcontainer/: devcontainer.json
MyPlaygroundFSharp/: AsyncHop.fsx  MyPlaygroundFSharp.fsproj  Option.fsx  Program.fs  global.json
MyPlaygroundFSharpPrompt/: .gitignore  paket.dependencies
MyPlaygroundNpgsql/: Dependency.fs  Domain.fs  Driver.fs  Gateway.fs  MyPlaygroundNpgsql.fsproj  Port.fs  Program.fs  Usecase.fs  docker-compose.yaml  paket.dependencies  paket.references
MyPlaygroundReader/: .gitignore  Program.fs  paket.dependencies
article/: spring-security-20231113.md
clojure-my-playground/: CHANGELOG.md  README.md  project.clj
clojure-my-playground-user-management/: CHANGELOG.md  README.md  project.clj
deno-my-playground/: scratch_20240113_1.ts  scratch_20240113_7.ts
deno-my-playground-sqlite/: main.ts
haskell-my-playground-pair/: .gitignore  CHANGELOG.md  dummy-user-information.csv  haskell-my-playground-pair.cabal
rust-my-playground-github-cli/: Cargo.toml  rust-my-playground-github-cli.code-workspace
rust-my-playground-github-cli/src/: command.rs  config.rs  driver.rs  main.rs  port.rs
rust-my-playground-github-cli/src/domain/: mod.rs  primitive.rs  repository.rs
rust-my-playground-github-cli/src/driver/: console_display_driver.rs  github.rs  http_github_driver.rs  mod.rs
rust-my-playground-github-cli/src/port/: display.rs  github.rs  mod.rs
rust-my-playground-github-cli/src/use_case/: list.rs  repository.rs
rust-my-playground-github-cli/tests/: list_repositories_test.rs
(+427 files in other folders)
