[package]
name = "rust-my-playground-github-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
mockall = "*"
futures = "*"
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
anyhow = "*"
log = "*"
env_logger = "*"

[features]
production = []